# task-agent

./: .code_signatures.json  .env  .gitignore  .mise.toml  .pre-commit-config.yaml  .ta-config.json  CLAUDE.md  Makefile  agent.env  opencode  opencode.json  pyproject.toml  taskhash.json
.gemini/: settings.json
.github/workflows/: ci.yml  publish.yml
.ta/: worker
.ta/agents/agy-cli/: meta.toml
.ta/agents/gh/: meta.toml
.ta/agents/minimal/: meta.toml
.ta/agents/uat-aws/: meta.toml
.task-agent/: worktree-config.json
.task-agent/tasks/.task-agent/: datapackage.json  mission.usv
.task-agent/tasks/completed/2026/: test-task.md  (+15 more)
.task-agent/tasks/deleted/: deleted.usv
.task-agent/tasks/strategy/: .meta.json  README.md
docs/: README.md  STATION-MAP.md  task-agents.md
docs/architecture/: README.md
docs/cli/: README.md
docs/development/: README.md
docs/issues/: datapackage.json  mission.usv
docs/issues/active/: new-issue-feature-in-mcp-should-require-completion-criteria.md
docs/issues/draft/: migrate-docsissues-to-docstasks.md  test-plan.md
docs/issues/pending/: add-json-switch-to-output-to-json-for-integrations-such-as-nvim.md  agent-reports-mcp-access-issue.md  allow-optional-role-property-of-the-issuetask.md  create-plugin-sidecar-strategy.md  done-should-require-explainaition-of-solution.md  fix-uv-lock.md  nest-dependent-tasks-under-their-parent-in-list-view.md  refactor-models.md  rename-triage.md  the-border-around-triage-is-dark-blue-on-black.md  triage-should-provide-an-add-feature.md  update-development-standards-to-use-ta-done.md  upgrade-to-tasks-should-handle-existing-issues-and-tasks.md
docs/tasks/: README.md  mission.usv  plan.md
docs/tasks/.task-agent/: mission.usv
docs/tasks/pending/: add-ta-mr-list-and-ta-merge-commands.md  allow-create-task-in-other-repo.md  create-adk-worker-readme.md  enhance-ta-start-to-trigger-sidecar.md  implement-merge-request-queue.md  migrate-from-markdown-files-to-folders-with-readmemd.md  migrate-to-tasks-directory.md  remove-dependency-on-gh-cli-by-adding-api.md  update-adk-worker-to-post-mr.md
docs/workflow/: trivial_worker_policy.md
scripts/: clean_duplicates.py  migrate_tasks.py  recover_dates.py
sidecars/adk-worker/: README.md  worker.py
sidecars/adk-worker/instructions/: manager.md  validator.md  worker.md
sidecars/adk-worker/profiles/: default.json
skills/: README.md
skills/complete-task/: SKILL.md
skills/mission-workflow/: SKILL.md
skills/next-task/: SKILL.md
src/issue_agent/: cli.py
src/taskagent/: __init__.py  agent.py  audit.py  cli.py  config.py  discovery.py  inbox.py  manager.py  mcp.py  store_registry.py  templates.py  theme.py
src/taskagent/models/: __init__.py  issue.py  metric.py
src/taskagent/plugins/: __init__.py  github.py
test-dir/: opencode.json
tests/: conftest.py  test_agent.py  test_agy_cli_worker.py  test_auto_commit.py  test_cli.py  test_cli_windows.py  test_discovery.py  test_github_token.py  test_inbox.py  test_manager.py  test_manager_git.py  test_mcp.py  test_metrics.py  test_migration.py  test_project_host_root.py  test_rebind.py  test_remote_attach.py  test_remote_create.py  test_repo_resolve.py  test_store_registry.py  test_store_symlink.py  test_templates.py
tests/e2e/: test_agent_sandboxing.sh
(+246 files in other folders)
