[project]
name = "task-agent"
version = "0.1.141"
description = "A prioritized, file-based task queue for autonomous agentic workers"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mark Stouffer", email = "1802850+InTEGr8or@users.noreply.github.com" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "rich>=13.9.4",
]

[project.scripts]
ta = "taskagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskagent"]
artifacts = ["sidecars/"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
    "bump-my-version==1.2.7",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.bumpversion]
current_version = "0.1.141"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.pytest.ini_options]
testpaths = ["tests"]
